// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en GifGrid debe de mostrar items cuando se cargan las imágenes useFetchGif 1`] = `
<Fragment>
  <h3
    className="category animate__animated animate__fadeIn"
  >
    Hola mundo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItems
      id="ABC"
      key="ABC"
      title="Sasuke"
      url="https://localhost/galery/sasuke.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueba en GifGrid debe hacer match el snapshot 1`] = `
<Fragment>
  <h3
    className="category animate__animated animate__fadeIn"
  >
    Hola mundo
  </h3>
  <div
    className="card-grid"
  >
    <p
      className="animate__animated animate__flash"
    >
      Loading
    </p>
  </div>
</Fragment>
`;
